--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,1 +1,5 @@
 /* css styles */
+img[src="images/logogithub.png"] { /* ciblage du logo github */
+    width: 100px; /* Ajuste selon la taille souhaitée */
+    height: auto;
+}
