ajout menu déroulant

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -32,3 +32,13 @@ h1 {
 .button:hover {
     background-color: #218838; /* Couleur au survol */
 }
+
+/* Exemple de styles CSS pour le menu déroulant */
+.navbar .dropdown-menu {
+    background-color: #007bff; /* Couleur de fond */
+    border-radius: 8px; /* Coins arrondis */
+  }
+  
+  .navbar .dropdown-item:hover {
+    background-color: #007bff; /* Couleur de survol */
+  }
