--- a/docs/styles.css
+++ b/docs/styles.css
@@ -42,3 +42,15 @@ h1 {
   .navbar .dropdown-item:hover {
     background-color: #007bff; /* Couleur de survol */
   }
+
+/* Ajuster la largeur du conteneur principal */
+.main-container {
+    max-width: 1600px; /* Par défaut, c'est souvent 800px */
+    margin: 0 auto;    /* Centrer le contenu */
+    padding: 200px;   /* Ajouter un peu d'espace sur les côtés */
+  }
+  
+.crop-bottom {
+    clip-path: inset(0 0 20% 0); /* Rogner 20% du bas */
+}
+  
