--- a/docs/styles.css
+++ b/docs/styles.css
@@ -13,7 +13,9 @@ body {
 }
 
 .container {
-    padding: 20px; /* Ajoute de l'espace autour du contenu */
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
@@ -45,12 +47,41 @@ h1 {
 
 /* Ajuster la largeur du conteneur principal */
 .main-container {
-    max-width: 1600px; /* Par défaut, c'est souvent 800px */
-    margin: 0 auto;    /* Centrer le contenu */
-    padding: 200px;   /* Ajouter un peu d'espace sur les côtés */
-  }
+    max-width: 1600px; /* Largeur maximale */
+    margin: 0 auto;    /* Centre le contenu */
+    padding: 0 20px;   /* Ajoute un padding uniquement sur les côtés */
+}
   
 .crop-bottom {
     clip-path: inset(0 0 20% 0); /* Rogner 20% du bas */
 }
   
+footer {
+    background-color: #0056b3;
+    color: #ffffff;
+    text-align: center;
+    padding: 10px 0;
+    width: 100%; /* S'assurer que le footer prend toute la largeur */
+    margin: 0;
+    box-sizing: border-box; /* Inclure le padding dans la largeur */
+    display: flex;
+    justify-content: center; /* Centrer le contenu horizontalement */
+    align-items: center; /* Centrer verticalement */
+}
+
+footer p {
+    margin: 0; /* Supprimer les marges autour du paragraphe */
+    display: flex;
+    align-items: center; /* Centrer verticalement le texte et l'image */
+    gap: 8px; /* Espace entre le texte et l'image */
+}
+
+footer a {
+    text-decoration: none;
+    color: #ffffff; /* Couleur des liens */
+}
+
+footer img {
+    width: 110px;
+    height: 40px;
+}
