--- a/docs/styles.css
+++ b/docs/styles.css
@@ -22,19 +22,6 @@ h1 {
     margin-top: 20px; /* Marge au-dessus du titre */
 }
 
-.button {
-    background-color: #28a745; /* Couleur de fond des boutons */
-    color: white; /* Couleur du texte */
-    border: none; /* Pas de bordure */
-    padding: 10px 20px; /* Espacement à l'intérieur du bouton */
-    border-radius: 5px; /* Coins arrondis */
-    cursor: pointer; /* Curseur en forme de main au survol */
-}
-
-.button:hover {
-    background-color: #218838; /* Couleur au survol */
-}
-
 /* Exemple de styles CSS pour le menu déroulant */
 .navbar .dropdown-menu {
     background-color: #007bff; /* Couleur de fond */
@@ -57,16 +44,24 @@ h1 {
 }
   
 footer {
-    background-color: #0056b3;
-    color: #ffffff;
-    text-align: center;
-    padding: 10px 0;
-    width: 100%; /* S'assurer que le footer prend toute la largeur */
-    margin: 0;
+    background-color: #0056b3; /* Couleur de fond */
+    color: #ffffff; /* Couleur du texte */
+    padding: 10px 20px; /* Espacement autour du contenu */
+    width: 100%; /* S'assurer que le footer occupe toute la largeur */
     box-sizing: border-box; /* Inclure le padding dans la largeur */
-    display: flex;
-    justify-content: center; /* Centrer le contenu horizontalement */
-    align-items: center; /* Centrer verticalement */
+    display: flex; /* Utiliser Flexbox */
+    justify-content: space-between; /* Placer les éléments aux extrémités */
+    align-items: center; /* Centrer verticalement les éléments */
+}
+
+.footer-left {
+    text-align: left; /* Aligner le texte à gauche */
+}
+
+.footer-right {
+    display: flex; /* Activer Flexbox pour aligner le logo et le texte horizontalement */
+    align-items: center; /* Centrer verticalement le logo et le texte */
+    gap: 8px; /* Espacement entre le logo et le texte */
 }
 
 footer p {
@@ -84,6 +79,10 @@ footer a {
 footer img {
     width: 110px;
     height: 40px;
+}
+
+footer img:hover {
+    transform: scale(1.2); /* Zoom au survol */
 }
 
 .wide-text {
