--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,11 +1,11 @@
 /* css styles */
 body {
-    background-color: #f8f9fa; /* Couleur de fond */
+    background-color: #f8f9fa00; /* Couleur de fond */
     color: #333; /* Couleur du texte */
 }
 
 .navbar {
-    background-color: #007bff; /* Couleur de la barre de navigation */
+    background-color: #007BFF; /* Couleur de la barre de navigation */
 }
 
 .navbar a {
@@ -44,15 +44,20 @@ h1 {
 }
   
 footer {
-    background-color: #0056b3; /* Couleur de fond */
-    color: #ffffff; /* Couleur du texte */
-    padding: 10px 20px; /* Espacement autour du contenu */
-    width: 100%; /* S'assurer que le footer occupe toute la largeur */
-    box-sizing: border-box; /* Inclure le padding dans la largeur */
-    display: flex; /* Utiliser Flexbox */
-    justify-content: space-between; /* Placer les éléments aux extrémités */
-    align-items: center; /* Centrer verticalement les éléments */
+    background-color: #007bff;
+    padding: 10px;
+    text-align: center;
+    font-size: 1em;
+    border-top: 1px solid #ddd;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 1000;
+    color: #ddd;
 }
+
 
 .footer-left {
     text-align: left; /* Aligner le texte à gauche */
@@ -61,7 +66,7 @@ footer {
 .footer-right {
     display: flex; /* Activer Flexbox pour aligner le logo et le texte horizontalement */
     align-items: center; /* Centrer verticalement le logo et le texte */
-    gap: 8px; /* Espacement entre le logo et le texte */
+    gap: 6px; /* Espacement entre le logo et le texte */
 }
 
 footer p {
