--- a/docs/styles.css
+++ b/docs/styles.css
@@ -46,7 +46,9 @@ h1 {
 footer {
     background-color: #007bff;
     padding: 10px;
-    text-align: center;
+    display: flex; /* Active Flexbox pour le footer */
+    justify-content: space-between; /* Écarte les éléments au maximum */
+    align-items: center; /* Aligne verticalement les éléments */
     font-size: 1em;
     border-top: 1px solid #ddd;
     position: fixed;
@@ -55,7 +57,7 @@ footer {
     width: 100%;
     box-sizing: border-box;
     z-index: 1000;
-    color: #ddd;
+    color: #ffffff;
 }
 
 
@@ -64,6 +66,7 @@ footer {
 }
 
 .footer-right {
+    margin-left: auto;
     display: flex; /* Activer Flexbox pour aligner le logo et le texte horizontalement */
     align-items: center; /* Centrer verticalement le logo et le texte */
     gap: 6px; /* Espacement entre le logo et le texte */
